syntax = "proto3";

package edaordersystem.protobuf;


message ProductTags {
  int64 product_id = 1;
  repeated string tags = 2;
}

message paymentRequestV1 {
  string order_id = 1;
  string payment_key = 2;
  int64 amount = 3;

}

message paymentResponseV1 {
  string order_id = 1;
  string order_name = 2;
  string payment_key = 3;
  string approved_at = 4;
  int64 amount = 5;
  map<string, string> metadata = 6;
}

message stockCountRequestV1 {
  // 상품 업뎃
  int64 product_id = 1;
  int64 decrement_stock_count = 2;
  int64 increment_stock_count = 3;

  //배송 요청 데이터
  string order_id = 4;
  string order_name = 5;
  int64 member_id = 6;
  string delivery_company = 7;
  string payment_key = 8;
  string address = 9;
  int64 amount = 10;
  string approved_at = 11;
}

message deliveryRequestV1 {
  // 배송 처리
  string order_id = 1;
  string order_name = 2;
  string address = 3;
  string delivery_company = 4;
  int64 product_count = 5;

  // 오더 응답 필요 데이터
  int64 member_id = 6;
  string payment_key = 7;
  string approved_at = 8;
  int64 amount = 9;
}

message deliveryResponseV1 {
  string order_id = 1;
  int64 delivery_id = 2;
  int64 member_id = 3;
  int64 product_count = 4;
  int64 amount = 5;
  string order_name = 6;
  string payment_key = 7;
  string approved_at = 8;
  string delivery_status = 9;
}


